fix(UI): Fix issues with the toolbar on mobile devices

--- a/app/src/ui/components/Editor/EditorToolbar.css
+++ b/app/src/ui/components/Editor/EditorToolbar.css
@@ -1,7 +1,7 @@
 .editor-toolbar {
     @apply fixed! elevation-2 left-4 right-4 rounded-full!;
     z-index: 100;
-    bottom: max(env(safe-area-inset-top, 0px), calc(var(--spacing) * 2));
+    bottom: max(env(safe-area-inset-bottom, 0px), calc(var(--spacing) * 4));
 
     @media (min-width: 768px) {
         @apply bottom-2;
@@ -11,29 +11,12 @@
 }
 
 .editor:has(:focus) .editor-toolbar {
-    --ios-keyboard-fix-start: calc(var(--toolbar-offset, 0px));
-    --ios-keyboard-fix-end: 0px;
-    animation: ios-keyboard-fix-down linear;
-    animation-timeline: scroll();
-    animation-range-end: calc(var(--toolbar-offset, 0px));
-    animation-fill-mode: both;
+    --correction-factor-scroll-down: 12px;
+    --correction-factor-scroll-up: env(safe-area-inset-bottom, 0px);
+    top: var(--offset-top, 0px);
 
     @media (min-width: 768px) {
         animation: none;
         bottom: max(env(safe-area-inset-top, 0px), calc(var(--spacing) * 2));
-
-        &.is-scrolling-up {
-            animation: none;
-        }
-    }
-}
-
-@keyframes ios-keyboard-fix-down {
-    from {
-        bottom: var(--ios-keyboard-fix-start);
-    }
-
-    to {
-        bottom: var(--ios-keyboard-fix-end);
     }
 }
